--- a/css/layout.css
+++ b/css/layout.css
@@ -18,6 +18,23 @@
   width: 100%;
 }
 
+.larger-textbox {
+  margin: 10px 0;
+  padding: 30px;
+}
+
+/* Spacing */
+
+.align-right {
+  text-align: right;
+}
+
+.full-width {
+  width: 100%;
+}
+
+/* Responsive layout  */
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 900px;
@@ -25,7 +42,7 @@
 
   .column-full,
   .column-half {
-    padding: 0 0.75rem;
+    padding: 0 2rem;
   }
 
   .column-half {
