--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,41 @@
 body {
+  margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #ecebec;
+}
+
+button {
+  background-color: #4c2373;
+  color: white;
+  text-transform: uppercase;
+  border: #4c2373;
+  border-radius: 7px;
+  padding: 10px 20px;
+}
+
+img {
+  max-width: 100%;
+  padding-bottom: 1rem;
+}
+
+/* Input */
+
+input {
+  margin: 10px 0;
+  padding: 5px 0;
+}
+
+input:focus {
+  border: 3px solid #4c2373;
+  outline: none;
+}
+
+/* Background and text colors */
+
+.purple-bg {
+  background-color: #4c2373;
+}
+
+.white-text {
+  color: white;
 }
