--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,14 @@
+header {
+  padding-left: 1rem;
+}
+
 body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   background-color: #ecebec;
+}
+
+main {
+  margin: 1.5rem;
 }
 
 button {
