--- a/css/layout.css
+++ b/css/layout.css
@@ -33,6 +33,10 @@
   width: 100%;
 }
 
+.margin-bottom {
+  margin-bottom: 2rem;
+}
+
 /* Responsive layout  */
 
 @media screen and (min-width: 768px) {
