--- a/css/layout.css
+++ b/css/layout.css
@@ -29,6 +29,10 @@
   text-align: right;
 }
 
+.align-center {
+  align-self: center;
+}
+
 .full-width {
   width: 100%;
 }
@@ -45,6 +49,10 @@
   display: inline-block;
 }
 
+/* .space-between {
+  justify-content: space-between;
+} */
+
 /* Responsive layout  */
 
 @media screen and (min-width: 768px) {
@@ -59,5 +67,9 @@
 
   .column-half {
     width: 50%;
+  }
+
+  .margin-left {
+    margin-left: 1 rem;
   }
 }
