--- a/css/styles.css
+++ b/css/styles.css
@@ -70,3 +70,9 @@ h2:hover {
   color: #4c2373;
   margin-left: 14rem;
 }
+
+/* Delete Link */
+.delete-link {
+  color: red;
+  text-decoration: underline;
+}
