--- a/css/layout.css
+++ b/css/layout.css
@@ -41,6 +41,14 @@
   width: 100%;
 }
 
+.margins {
+  margin: 1.5rem;
+}
+
+.margin-left {
+  margin-left: 1.5rem;
+}
+
 .margin-bottom {
   margin-bottom: 2rem;
 }
@@ -53,9 +61,14 @@
   display: inline-block;
 }
 
-/* .space-between {
+.center-text {
+  text-align: center;
+}
+
+.space-between {
+  display: flex;
   justify-content: space-between;
-} */
+}
 
 /* Responsive layout  */
 
@@ -71,9 +84,5 @@
 
   .column-half {
     width: 50%;
-  }
-
-  .margin-left {
-    margin-left: 1 rem;
   }
 }
