--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,7 @@
-/* header {
-  padding-left: 1rem;
-} */
-
 body {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   background-color: #ecebec;
 }
-
-/* main {
-  margin: 1.5rem;
-} */
 
 button {
   background-color: #4c2373;
@@ -24,8 +16,6 @@ img {
   max-width: 100%;
   padding-bottom: 1rem;
 }
-
-/* Input */
 
 input {
   margin: 10px 0;
@@ -55,35 +45,26 @@ ul {
 }
 
 /* Nav Bar */
-
 a {
   text-decoration: none;
 }
 
 /* Editing */
+
 .pencil {
   font-size: 24px;
   color: #4c2373;
   margin-left: 14rem;
 }
 
-/* Delete Link */
 .delete-link {
   color: red;
   text-decoration: underline;
 }
 
-a:hover,
-h2:hover,
-button:hover,
-.pencil:hover,
-.delete-link:hover {
-  cursor: pointer;
-}
-
 /* Modal */
+
 .modal-bg {
-  /* display: none; */
   position: fixed;
   top: 0;
   z-index: 1;
@@ -109,4 +90,13 @@ button:hover,
 
 .confirm-button {
   background-color: red;
+}
+
+/* Styling */
+a:hover,
+h2:hover,
+button:hover,
+.pencil:hover,
+.delete-link:hover {
+  cursor: pointer;
 }
